--- a/style.css
+++ b/style.css
@@ -31,7 +31,11 @@ p {
 }
 
 .container {
+  max-width: 1200px;
+  width: 100%;
+  margin: 0 auto;
 }
+
 /* base end */
 
 /*! HEADER START */
@@ -88,10 +92,8 @@ header {
   text-transform: uppercase;
 }
 
-
-.header-center .menu-list  i {
+.header-center .menu-list i {
   font-size: 12px;
- 
 }
 
 /*! HEADER END */
