--- a/style.css
+++ b/style.css
@@ -86,14 +86,107 @@ header {
   align-items: center;
 }
 
+.header-center .menu-list .menu-list-item {
+  display: flex;
+  align-items: center;
+  position: relative;
+  height: 90px;
+}
+
 .header-center .menu-list .menu-link {
   font-size: 14px;
   font-weight: 500;
   text-transform: uppercase;
+  letter-spacing: 1.2px;
+  position: relative;
+}
+
+.header-center .menu-list .menu-link::after {
+  content: "";
+  width: 0;
+  height: 1px;
+  background-color: #475161;
+  position: absolute;
+  bottom: -2px;
+  left: 50%;
+  transform: translate(-50%);
+  transition: 0.2s ease width;
+}
+.header-center .menu-list .menu-list-item:hover .menu-link::after {
+  width: 100%;
+}
+
+.header-center .menu-list .menu-link.active::after {
+  width: 100%;
 }
 
 .header-center .menu-list i {
   font-size: 12px;
 }
+
+.header-right .header-right-links {
+  display: flex;
+  align-items: center;
+  column-gap: 30px;
+}
+
+.header-right .bi-person {
+  font-size: 23px;
+}
+
+.header-right .toggle-button {
+  border: none;
+  background-color: transparent;
+}
+
+.header-right i {
+  font-size: 18px;
+  flex-direction: column;
+}
+
+.header-right .header-cart {
+  position: relative;
+}
+.header-right .header-cart .header-cart-count {
+  position: absolute;
+  top: 0%;
+}
+
+/*? menu dropdown start */
+
+header .menu-dropdown-wrapper {
+  position: absolute;
+  top: 100%;
+  left: -30px;
+  opacity: 0;
+  visibility: hidden;
+  transition: all 0.2s ease;
+}
+
+header .menu-dropdown-content {
+  width: 220px;
+  background-color: white;
+  border: 1px solid #dee0ea;
+  display: flex;
+  flex-direction: column;
+  padding: 18px 0;
+}
+
+header .menu-dropdown-content a {
+  display: flex;
+  padding: 4px 30px;
+  font-size: 14px;
+  transition: color 0.2s ease;
+}
+
+header .menu-dropdown-content a:hover {
+  color: antiquewhite;
+}
+.header-center .menu-list .menu-list-item:hover .menu-dropdown-wrapper {
+  opacity: 1;
+  visibility: visible;
+}
+
+/*? menu dropdown end */
 
 /*! HEADER END */
