--- a/style.css
+++ b/style.css
@@ -331,9 +331,6 @@ header .menu-dropdown-content a:hover {
   position: fixed;
   padding: 30px;
 }
-.modal-wrapper img {
-  max-width: 200px;
-}
 
 .modal-search .modal-title {
   font-size: 30px;
@@ -382,7 +379,63 @@ header .menu-dropdown-content a:hover {
 }
 
 .modal-search .search-results {
-  margin-top: 15px;
+  margin-top: 30px;
+}
+.modal-search .search-heading {
+  padding: 15px;
+  background-color: #f9f9f9;
+  border: 1px solid #dee0ea;
+}
+
+.modal-search .search-heading h3 {
+  font-size: 16px;
+  font-weight: 600;
+}
+.modal-search .results {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  border-left: 1px solid #dee0ea;
+}
+.modal-search .result-item {
+  display: flex;
+  column-gap: 15px;
+  align-items: center;
+  padding: 15px;
+  border-bottom: 1px solid #dee0ea;
+  border-right: 1px solid #dee0ea;
+  transition: background-color .2s ease ;
+}
+.modal-search .result-item:hover {
+  background-color: #f9f9f9;
+}
+
+.modal-search .search-thumb {
+  max-width: 68px;
+  width: 100%;
+}
+
+.modal-search .search-info {
+  font-size: 14px;
+  display: flex;
+  flex-direction: column;
+}
+
+.modal-search .search-sku {
+  color: #7a7a7a;
+  margin: 2px 0;
+}
+
+.modal-search .search-price {
+  font-weight: 600;
+  color: #dc3545;
+}
+
+.modal-search .bi-x-circle {
+  position: absolute;
+  top: 5px;
+  right: 10px;
+  font-size: 20px;
+  cursor: pointer;
 }
 
 /*modal search end */
