--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@ p {
   max-width: 1200px;
   width: 100%;
   margin: 0 auto;
+
 }
 .logo {
   font-size: 24px;
@@ -309,6 +310,7 @@ header .menu-dropdown-content a:hover {
   display: flex;
   justify-content: center;
   align-items: center;
+  visibility: hidden;
 }
 
 .modal-search::after {
@@ -437,5 +439,99 @@ header .menu-dropdown-content a:hover {
   font-size: 20px;
   cursor: pointer;
 }
-
 /*modal search end */
+
+
+@media (max-width: 1200px){
+  .container{
+    max-width: 992px;
+  }
+}
+
+@media (max-width: 992px){
+  .container{
+    max-width: 768px;
+  }
+}
+@media (max-width: 768px){
+  .container{
+    max-width: 576px;
+  }
+}
+@media (max-width: 576px) {
+  .container {
+    max-width: 400px;
+  }
+}
+
+@media (max-width: 420px) {
+  .container {
+    max-width: 350px;
+  }
+}
+
+/*! header responsive */
+@media (max-width: 650px) {
+  .header-center {
+    position: fixed;
+    top: 0;
+    left: -100%;
+    height: 100vh;
+    background-color: #fff;
+    border-right: 1px solid #dee0ea;
+  }
+
+  .header-center .bi-x-circle {
+    display: inline-block;
+    position: absolute;
+    top: 15px;
+    right: 15px;
+    font-size: 20px;
+    cursor: pointer;
+  }
+
+  .header-center .menu-list {
+    flex-direction: column;
+    padding: 50px 75px;
+  }
+
+  .header-mobile {
+    display: inline-block;
+  }
+
+  header .menu-dropdown-wrapper{
+    display: none !important;
+  }
+
+  header .menu-list i {
+    display: none;
+  }
+  header .menu-list-item a {
+    font-size: 16px !important;
+  }
+}
+
+/*! search responsive  */
+
+@media (max-width: 992px){
+  .modal-search .modal-wrapper{
+    max-width: 370px;
+  }
+    .modal-search .results{
+      grid-template-columns: 1fr;
+    }
+} 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
