--- a/style.css
+++ b/style.css
@@ -34,7 +34,6 @@ p {
   max-width: 1200px;
   width: 100%;
   margin: 0 auto;
-
 }
 .logo {
   font-size: 24px;
@@ -122,8 +121,14 @@ header {
   justify-content: space-between;
   max-width: 1200px;
   width: 100%;
+  height: 90px;
   margin: 0 auto;
   align-items: center;
+}
+.header-mobile {
+  font-size: 24px;
+  cursor: pointer;
+  display: none;
 }
 
 .header-left .logo {
@@ -405,7 +410,7 @@ header .menu-dropdown-content a:hover {
   padding: 15px;
   border-bottom: 1px solid #dee0ea;
   border-right: 1px solid #dee0ea;
-  transition: background-color .2s ease ;
+  transition: background-color 0.2s ease;
 }
 .modal-search .result-item:hover {
   background-color: #f9f9f9;
@@ -441,20 +446,19 @@ header .menu-dropdown-content a:hover {
 }
 /*modal search end */
 
-
-@media (max-width: 1200px){
-  .container{
+@media (max-width: 1200px) {
+  .container {
     max-width: 992px;
   }
 }
 
-@media (max-width: 992px){
-  .container{
+@media (max-width: 992px) {
+  .container {
     max-width: 768px;
   }
 }
-@media (max-width: 768px){
-  .container{
+@media (max-width: 768px) {
+  .container {
     max-width: 576px;
   }
 }
@@ -469,7 +473,6 @@ header .menu-dropdown-content a:hover {
     max-width: 350px;
   }
 }
-
 /*! header responsive */
 @media (max-width: 650px) {
   .header-center {
@@ -499,7 +502,7 @@ header .menu-dropdown-content a:hover {
     display: inline-block;
   }
 
-  header .menu-dropdown-wrapper{
+  header .menu-dropdown-wrapper {
     display: none !important;
   }
 
@@ -513,25 +516,11 @@ header .menu-dropdown-content a:hover {
 
 /*! search responsive  */
 
-@media (max-width: 992px){
-  .modal-search .modal-wrapper{
+@media (max-width: 992px) {
+  .modal-search .modal-wrapper {
     max-width: 370px;
   }
-    .modal-search .results{
-      grid-template-columns: 1fr;
-    }
-} 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+  .modal-search .results {
+    grid-template-columns: 1fr;
+  }
+}
