--- a/style.css
+++ b/style.css
@@ -209,9 +209,20 @@ header {
 .header-right .header-cart {
   position: relative;
 }
-.header-right .header-cart .header-cart-count {
+.header-right .header-cart-link .header-cart-count {
+  width: 16px;
+  height: 16px;
+  background-color: #020202;
+  color: white;
+  font-size: 10px;
+  border-radius: 100%;
   position: absolute;
-  top: 0%;
+  top: -10px;
+  right: -10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: 500;
 }
 
 /*? menu dropdown start */
