--- a/css/base.css
+++ b/css/base.css
@@ -91,6 +91,13 @@ input[type="number"]::-webkit-inner-spin-button {
   opacity: 1;
 }
 
+.img-fluid{
+width: 100%;
+  
+}
+
+
+
 /* base end */
 
 /* base responsive*/
