--- a/css/components/slider.css
+++ b/css/components/slider.css
@@ -4,7 +4,7 @@
 
 .slider-item {
   position: relative;
-  height: calc(100vh - 137px);
+  height: calc(100vh - 135px);
   display: flex;
   align-items: center;
 }
@@ -84,4 +84,14 @@
   background-color: antiquewhite;
   border: 1px solid rgb(172, 139, 97);
   border-radius: 100%;
+}
+@media (max-width: 768px) {
+  .slider-item {
+    height: calc(100vh - 135px);
+  }
+
+  .slider-buttons {
+    display: none !important;
+  }
+
 }
