product-item-html

--- a/css/components/slider.css
+++ b/css/components/slider.css
@@ -27,6 +27,11 @@
   font-size: 60px;
   font-weight: 600;
 }
+.slider-item a {
+  position: relative;
+  z-index: 1;
+}
+
 .slider .slider-buttons {
   position: absolute;
   top: 0;
