--- a/css/pages/home.css
+++ b/css/pages/home.css
@@ -1,27 +1,27 @@
 .section-title {
-    text-align: center;
-    margin-bottom: 35px;
-  }
-  
-  .section-title h2 {
-    font-size: 32px;
-    font-weight: 600;
-  }
-  
-  /*! categories start  */
-  .categories {
-    margin: 40px 0;
-  }
-  
-  .categories .category-list {
-    display: flex;
-    gap: 30px;
-    margin-top: 30px;
-    flex-wrap: wrap;
-  }
-  /*! categories end  */
+  text-align: center;
+  margin-bottom: 35px;
+}
 
-  /*! products start  */
+.section-title h2 {
+  font-size: 32px;
+  font-weight: 600;
+}
+
+/*! categories start  */
+.categories {
+  margin: 40px 0;
+}
+
+.categories .category-list {
+  display: flex;
+  gap: 30px;
+  margin-top: 30px;
+  flex-wrap: wrap;
+}
+/*! categories end  */
+
+/*! products start  */
 
 .products {
   margin-bottom: 40px;
@@ -33,3 +33,11 @@
   flex-wrap: wrap;
 }
 /*! products end  */
+/*! campaign start  */
+.campaigns .campaigns-wrapper {
+  display: flex;
+  gap: 30px;
+  margin-top: 30px;
+  flex-wrap: wrap;
+}
+/*! campaign end  */
