--- a/css/pages/home.css
+++ b/css/pages/home.css
@@ -33,11 +33,13 @@
   flex-wrap: wrap;
 }
 /*! products end  */
+
+
 /*! campaign start  */
 .campaigns .campaigns-wrapper {
   display: flex;
   gap: 30px;
-  margin-top: 30px;
+  margin: 30px;
   flex-wrap: wrap;
 }
 /*! campaign end  */
