--- a/css/pages/home.css
+++ b/css/pages/home.css
@@ -55,6 +55,31 @@
 }
 /*! blogs end  */
 
+/*! brands start  */
+.brands{
+  margin: 40px 0;
+}
+
+.brand-list{
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  border: 1px solid #dee0ea;
+  padding: 30px 5px;
+}
+
+.brand-list .brand-item{
+  opacity: 0.4;
+  transition: .2s ease opacity;
+}
+
+.brand-list .brand-item:hover{
+  opacity: 1;
+}
+/*! brands end  */
+
+
+
 /*! responsive  */
 
 @media (max-width: 768px) {
@@ -62,3 +87,4 @@
     grid-template-columns: 1fr;
   }
 }
+
