--- a/css/pages/home.css
+++ b/css/pages/home.css
@@ -38,7 +38,7 @@
 .campaigns .campaigns-wrapper {
   display: flex;
   gap: 30px;
-  margin: 30px;
+  margin: 30px 0;
   flex-wrap: wrap;
 }
 /*! campaign end  */
@@ -56,11 +56,11 @@
 /*! blogs end  */
 
 /*! brands start  */
-.brands{
+.brands {
   margin: 40px 0;
 }
 
-.brand-list{
+.brand-list {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
@@ -68,17 +68,15 @@
   padding: 30px 5px;
 }
 
-.brand-list .brand-item{
+.brand-list .brand-item {
   opacity: 0.4;
-  transition: .2s ease opacity;
+  transition: 0.2s ease opacity;
 }
 
-.brand-list .brand-item:hover{
+.brand-list .brand-item:hover {
   opacity: 1;
 }
 /*! brands end  */
-
-
 
 /*! responsive  */
 
@@ -87,4 +85,3 @@
     grid-template-columns: 1fr;
   }
 }
-
