--- a/css/base.css
+++ b/css/base.css
@@ -7,7 +7,7 @@
   box-sizing: border-box;
   font-family: "Roboto Slab", serif;
 }
-body{
+body {
   overflow-x: hidden;
 }
 
@@ -75,11 +75,15 @@ button {
   color: rgb(172, 139, 97);
   border-color: antiquewhite;
 }
+textarea {
+  overflow: auto;
+}
 
 input[type="text"],
 input[type="password"],
 input[type="email"],
-input[type="number"] {
+input[type="number"],
+textarea {
   outline: none;
   border: 1px solid #dee0ea;
   padding: 8px 8px 8px 15px;
@@ -87,21 +91,20 @@ input[type="number"] {
 input[type="text"]:focus,
 input[type="password"]:focus,
 input[type="email"]:focus,
-input[type="number"]:focus {
-  border-color: #475161;
+input[type="number"]:focus,
+textarea:focus {
+  border-color: gray;
 }
+
 input[type="number"]::-webkit-inner-spin-button {
   opacity: 1;
 }
 
-.img-fluid{
-width: 100%;
-  
+.img-fluid {
+  width: 100%;
 }
 
-
-
-/* base end */
+/*! base end  */
 
 /* base responsive*/
 
