--- a/css/layout/footer.css
+++ b/css/layout/footer.css
@@ -111,6 +111,34 @@
 }
 
 /*! widgets end  */
+/*! copyright start  */
+.footer-copyright {
+  margin: 40px 0;
+  display: flex;
+  align-items: center;
+}
+
+.footer-copyright .site-copyright {
+  font-size: 12px;
+  margin-right: 10px;
+}
+
+.footer-copyright .footer-menu {
+  margin-left: auto;
+}
+
+.footer-copyright .footer-menu-list {
+  display: flex;
+  align-items: center;
+  font-size: 12px;
+  column-gap: 10px;
+}
+
+.footer-copyright .footer-menu-list .list-item:not(:last-child) {
+  padding-right: 10px;
+  border-right: 1px solid #dee0ea;
+}
+/*! copyright end  */
 
 /*! responsive  */
 
@@ -119,6 +147,15 @@
     flex-direction: column;
     row-gap: 20px;
   }
+}
+.footer-copyright {
+  flex-direction: column;
+  text-align: center;
+  row-gap: 10px;
+}
+
+.footer-copyright .footer-menu {
+  margin-left: unset;
 }
 .footer .brand-info {
     margin-bottom: 20px;
