--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,12 @@
-/* global css*/
+/*! global css  */
+
 @import url(base.css);
 
-/* layout */
+/*! layout  */
 @import url(layout/header.css);
+@import url(layout/footer.css);
 
-/* component*/
+/*! components  */
 @import url(components/modal-search.css);
 @import url(components/slider.css);
 @import url(components/category-item.css);
@@ -13,9 +15,8 @@
 @import url(components/blog-item.css);
 @import url(components/campaign-single.css);
 
-
-/* pages */
+/*! pages  */
 @import url(pages/home.css);
-
-/* layout */
-@import url(layout/footer.css);
+@import url(pages/contact.css);
+@import url(pages/account.css);
+@import url(pages/cart.css);
