--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,4 @@
 /*! global css  */
-
 @import url(base.css);
 
 /*! layout  */
@@ -14,9 +13,16 @@
 @import url(components/campaign-item.css);
 @import url(components/blog-item.css);
 @import url(components/campaign-single.css);
+@import url(components/single-product/breadcrumb.css);
+@import url(components/single-product/product-gallery.css);
+@import url(components/single-product/product-info.css);
+@import url(components/single-product/product-tabs.css);
 
 /*! pages  */
 @import url(pages/home.css);
 @import url(pages/contact.css);
 @import url(pages/account.css);
 @import url(pages/cart.css);
+@import url(pages/blog.css);
+@import url(pages/single-blog.css);
+@import url(pages/single-product.css);
