--- a/css/components/slider.css
+++ b/css/components/slider.css
@@ -78,6 +78,24 @@
   opacity: 0.4;
   transition: 0.2s ease opacity;
 }
+.slider .slider-dots .slider-dot.active {
+  opacity: 1;
+}
+
+.fade {
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@keyframes fade {
+  from {
+    opacity: 0.4;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
 .slider .slider-dots .slider-dot:hover {
   opacity: 1;
 }
