--- a/css/layout/header.css
+++ b/css/layout/header.css
@@ -1,15 +1,15 @@
-/*! HEADER START */
+/*! header start  */
 header {
   border-bottom: 1px solid #dee0ea;
   position: relative;
 }
 
 .global-notification {
-  background-color: burlywood;
+  background-color: rgb(172, 139, 97);
   padding: 14px 0;
   text-align: center;
   font-size: 12px;
-  color: aliceblue;
+  color: white;
 }
 
 .global-notification a {
@@ -19,37 +19,28 @@ header {
 
 .header-row {
   height: 90px;
+  display: flex;
+  align-items: center;
 }
 
 .header-wrapper {
   display: flex;
   justify-content: space-between;
-  max-width: 1200px;
-  width: 100%;
-  height: 90px;
-  margin: 0 auto;
   align-items: center;
 }
+
 .header-mobile {
   font-size: 24px;
   cursor: pointer;
   display: none;
 }
 
-.header-left .logo {
-  font-size: 24px;
-  font-weight: 500px;
-  display: flex;
-}
-
-.header-center .menu-list {
-  display: flex;
-  column-gap: 10px;
-  align-items: center;
+.header-center .bi-x-circle {
+  display: none;
 }
 .header-center .navigation .menu-list {
   display: flex;
-  column-gap: 10px;
+  column-gap: 30px;
   align-items: center;
 }
 
@@ -72,7 +63,7 @@ header {
   content: "";
   width: 0;
   height: 1px;
-  background-color: #475161;
+  background-color: rgb(41, 40, 39);
   position: absolute;
   bottom: -2px;
   left: 50%;
@@ -94,21 +85,21 @@ header {
 .header-right .header-right-links {
   display: flex;
   align-items: center;
-  column-gap: 30px;
+  column-gap: 16px;
 }
 
 .header-right .bi-person {
   font-size: 23px;
 }
 
-.header-right .toggle-button {
+.header-right .-button {
   border: none;
   background-color: transparent;
 }
 
 .header-right i {
   font-size: 18px;
-  flex-direction: column;
+  display: flex;
 }
 
 .header-right .header-cart {
@@ -117,7 +108,7 @@ header {
 .header-right .header-cart-link .header-cart-count {
   width: 16px;
   height: 16px;
-  background-color: #020202;
+  background-color: rgb(172, 139, 97);
   color: white;
   font-size: 10px;
   border-radius: 100%;
@@ -129,9 +120,7 @@ header {
   justify-content: center;
   font-weight: 500;
 }
-
-/*? menu dropdown start */
-
+/*? menu dropdown start  */
 header .menu-dropdown-wrapper {
   position: absolute;
   top: 100%;
@@ -140,12 +129,11 @@ header .menu-dropdown-wrapper {
   visibility: hidden;
   transition: all 0.2s ease;
   z-index: 1;
-  display: none !important;
 }
 
-header .menu-dropdown-content {
+header .menu-dropdown-content header .menu-dropdown-content a:hover {
   width: 220px;
-  background-color: white;
+  background-color: #fff;
   border: 1px solid #dee0ea;
   display: flex;
   flex-direction: column;
@@ -160,7 +148,7 @@ header .menu-dropdown-content a {
 }
 
 header .menu-dropdown-content a:hover {
-  color: antiquewhite;
+  color: rgb(172, 139, 97);
 }
 .header-center .menu-list .menu-list-item:hover .menu-dropdown-wrapper {
   opacity: 1;
@@ -218,12 +206,9 @@ header .menu-dropdown-content a:hover {
 .megamenu-wrapper .megamenu-single-button {
   margin-top: 5px;
 }
-
-/*? menu dropdown end */
-
-/*! HEADER END */
-
-/*! header responsive */
+/*? menu dropdown end  */
+/*! header end  */
+/* header responsive */
 @media (max-width: 650px) {
   .header-center {
     position: fixed;
@@ -232,13 +217,15 @@ header .menu-dropdown-content a:hover {
     height: 100vh;
     background-color: #fff;
     border-right: 1px solid #dee0ea;
+    z-index: 2;
+    transition: 0.5s ease all;
   }
 
   .header-center .bi-x-circle {
     display: inline-block;
     position: absolute;
     top: 15px;
-    right: 1px;
+    right: 15px;
     font-size: 20px;
     cursor: pointer;
   }
@@ -263,4 +250,3 @@ header .menu-dropdown-content a:hover {
     font-size: 16px !important;
   }
 }
-
