--- a/css/pages/home.css
+++ b/css/pages/home.css
@@ -31,9 +31,9 @@
 }
 
 .products .product-list {
-  display: flex;
+   /*   display: flex;
   gap: 20px;
-  flex-wrap: wrap;
+  flex-wrap: wrap; */
 }
 /*! products end  */
 
