--- a/css/pages/home.css
+++ b/css/pages/home.css
@@ -2,19 +2,16 @@
   text-align: center;
   margin-bottom: 35px;
 }
-
 .section-title h2 {
   font-size: 32px;
   font-weight: 600;
   line-height: 0.8;
   margin-bottom: 4px;
 }
-
 /*! categories start  */
 .categories {
   margin: 40px 0;
 }
-
 .categories .category-list {
   display: flex;
   gap: 30px;
@@ -22,9 +19,7 @@
   flex-wrap: wrap;
 }
 /*! categories end  */
-
 /*! products start  */
-
 .products {
   margin-bottom: 40px;
 }
@@ -36,6 +31,10 @@
 }
 /*! products end  */
 
+Expand Down
+    
+    
+  
 /*! campaign start  */
 .campaigns .campaigns-wrapper {
   display: flex;
@@ -44,32 +43,20 @@
   flex-wrap: wrap;
 }
 /*! campaign end  */
-
 /*! blogs start  */
 .blogs {
   margin-bottom: 30px;
 }
-
 .blogs .blog-list {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   gap: 30px;
 }
 /*! blogs end  */
-
-/*! responsive  */
-
-@media (max-width: 768px) {
-  .blogs .blog-list {
-    grid-template-columns: 1fr;
-  }
-}
-
 /*! brands start  */
 .brands {
   margin: 40px 0;
 }
-
 .brand-list {
   display: flex;
   justify-content: space-between;
@@ -77,55 +64,51 @@
   border: 1px solid #dee0ea;
   padding: 30px 5px;
 }
-
 .brand-list .brand-item {
   opacity: 0.4;
   transition: 0.2s ease opacity;
 }
-
 .brand-list .brand-item:hover {
   opacity: 1;
 }
 /*! brands end  */
-
 /*! policy start  */
-
 .policy {
   border: 1px solid #dee0ea;
   margin-top: 40px;
 }
-
 .policy .policy-list {
   display: flex;
-  flex-wrap: wrap;
   justify-content: space-between;
+  flex-wrap: wrap;
   padding: 25px 0;
-  flex-direction: row; /* Flex sıralamasını yatay olarak yapılandırma */
 }
-
-.policy .policy-item {
+.policy .policy-list .policy-item {
   display: flex;
   align-items: center;
   column-gap: 10px;
 }
-
 .policy .policy-item i {
   font-size: 50px;
+  display: flex;
 }
-
 .policy .policy-item .policy-texts {
   display: flex;
   flex-direction: column;
 }
-
 .policy .policy-item .policy-texts strong {
   font-weight: 600;
 }
-
 .policy .policy-item .policy-texts span {
   font-size: 12px;
 }
-
 /*! policy end  */
-
-/*! responsive  */
+/* responsive  */
+@media (max-width: 768px) {
+  .blogs .blog-list {
+    grid-template-columns: 1fr;
+  }
+  .policy .policy-list {
+    flex-direction: column;
+  }
+}
