--- a/css/components/slider.css
+++ b/css/components/slider.css
@@ -4,7 +4,7 @@
 
 .slider-item {
   position: relative;
-  height: calc(100vh - 135px);
+  height: calc(100vh - 137px);
   display: flex;
   align-items: center;
 }
@@ -23,10 +23,12 @@
   font-size: 18px;
   font-weight: 500;
 }
+
 .slider-item .slider-heading {
   font-size: 60px;
   font-weight: 600;
 }
+
 .slider-item a {
   position: relative;
   z-index: 1;
@@ -43,25 +45,28 @@
   justify-content: space-between;
   padding: 0 30px;
 }
+
 .slider-buttons button {
   width: 60px;
   height: 60px;
   border-radius: 100%;
-  border: 1px solid white;
+  border: 1px solid #dee0ea;
   background-color: white;
   opacity: 0.5;
   transition: 0.2s ease all;
 }
+
 .slider-buttons button:hover {
-  background-color: antiquewhite;
+  background-color: #daa06d;
   opacity: 1;
-  color: white;
-  border-color: antiquewhite;
+  color: #fff;
+  border-color: #daa06d;
 }
 
 .slider-buttons button i {
   font-size: 30px;
 }
+
 .slider .slider-dots {
   position: absolute;
   bottom: 20px;
@@ -78,6 +83,19 @@
   opacity: 0.4;
   transition: 0.2s ease opacity;
 }
+
+.slider .slider-dots .slider-dot:hover {
+  opacity: 1;
+}
+
+.slider .slider-dots .slider-dot span {
+  display: inline-block;
+  width: 12px;
+  height: 12px;
+  background-color: #daa06d;
+  border-radius: 100%;
+}
+
 .slider .slider-dots .slider-dot.active {
   opacity: 1;
 }
@@ -96,21 +114,9 @@
   }
 }
 
-.slider .slider-dots .slider-dot:hover {
-  opacity: 1;
-}
-
-.slider .slider-dots .slider-dot span {
-  display: inline-block;
-  width: 12px;
-  height: 12px;
-  background-color: antiquewhite;
-  border: 1px solid rgb(172, 139, 97);
-  border-radius: 100%;
-}
 @media (max-width: 768px) {
   .slider-item {
-    height: calc(100vh - 135px);
+    height: calc(100vh - 155px);
   }
 
   .slider-buttons {
