--- a/css/main.css
+++ b/css/main.css
@@ -18,11 +18,13 @@
 @import url(components/single-product/product-info.css);
 @import url(components/single-product/product-tabs.css);
 @import url(components/reviews.css);
+@import url(components/modal-dialog.css);
+
 /*! pages  */
 @import url(pages/home.css);
 @import url(pages/contact.css);
 @import url(pages/account.css);
 @import url(pages/cart.css);
+@import url(pages/single-product.css);
 @import url(pages/blog.css);
 @import url(pages/single-blog.css);
-@import url(pages/single-product.css);
