--- a/css/pages/cart.css
+++ b/css/pages/cart.css
@@ -6,7 +6,9 @@
   display: flex;
   justify-content: space-between;
 }
+
 /*! cart form start  */
+
 .cart-page .cart-form {
   flex-basis: 60%;
 }
@@ -35,6 +37,7 @@
   position: relative;
   z-index: -1;
 }
+
 .cart-page .progress-bar span {
   background-color: red;
   width: 30%;
@@ -50,6 +53,7 @@
 .cart-form table img {
   width: 60px;
 }
+
 .cart-form .shop-table-wrapper {
   overflow-x: auto;
 }
@@ -137,95 +141,85 @@
 }
 /*? actions end  */
 
-/*! cart form end  */
+/*? collaterals star  */
 
-/*? progress end  */
-
-/*? table start  */
-.cart-form table img {
-  width: 60px;
+.cart-collaterals {
+  flex: 0 0 300px;
+  border: 1px solid #dee0ea;
+  padding: 30px;
 }
 
-.cart-form table > :not(caption) > * > * {
-  padding: 8px 0;
-}
-
-.cart-form table {
-  border-collapse: collapse;
+.cart-collaterals table {
   width: 100%;
-  margin-top: 30px;
-  font-size: 14px;
+  border-collapse: collapse;
 }
 
-.cart-form table thead th {
-  text-align: start;
-  font-size: 14px;
-  font-weight: 600;
-}
-
-.cart-form table .product-quantity,
-.cart-form table .product-subtotal {
-  text-align: center;
-}
-
-.cart-form table tbody {
-  border-top: 1px solid #dee0ea;
-}
-
-.cart-form table tbody .cart-item {
+.cart-collaterals h2 {
+  font-weight: 500;
+  font-size: 16px;
+  padding-bottom: 15px;
   border-bottom: 1px solid #dee0ea;
 }
 
-.cart-form table tbody .cart-image {
-  position: relative;
+.cart-collaterals table * {
+  font-size: 14px;
+  font-weight: 400;
 }
 
-.cart-form table tbody i {
-  position: absolute;
-  top: 2px;
-  left: -6px;
-  background-color: #ee403d;
-  width: 16px;
-  height: 16px;
-  border-radius: 100%;
-  color: #fff;
-  display: grid;
-  place-items: center;
-  font-size: 13px;
-  cursor: pointer;
+.cart-collaterals table tr:not(:last-child) {
+  border-bottom: 1px solid #dee0ea;
 }
 
-/*? table end  */
+.cart-collaterals table th {
+  text-align: start;
+  padding: 20px 0 10px 0;
+}
 
-/*? actions start  */
-.actions-wrapper {
+.cart-collaterals table td {
+  text-align: end;
+  padding: 20px 0 10px 0;
+}
+
+.cart-collaterals table ul {
   display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-  gap: 10px;
-  margin-top: 15px;
+  flex-direction: column;
+  row-gap: 10px;
 }
 
-.actions-wrapper .coupon {
+.cart-collaterals table ul label {
   display: flex;
   align-items: center;
-  column-gap: 10px;
+  justify-content: flex-end;
+  column-gap: 5px;
 }
 
-.actions-wrapper .coupon button {
-  background-color: #000;
-  color: #fff;
+.cart-collaterals table ul a {
+  color: #ee403d;
+  font-weight: 500;
 }
 
-.actions-wrapper .coupon input {
-  height: 100%;
+.cart-collaterals table strong {
+  font-size: 18px;
+  font-weight: 700;
 }
 
-.actions-wrapper .update-cart button {
+.cart-collaterals .checkout button {
+  margin-top: 30px;
   background-color: #ee403d;
   color: #fff;
-  border: #fff;
+  border-color: #fff;
+  width: 100%;
 }
-/*? actions end  */
+
+/*? collaterals end  */
 
 /*! cart form end  */
+
+/* responsive */
+
+@media (max-width: 992px) {
+  .cart-page-wrapper {
+    flex-direction: column;
+    row-gap: 30px;
+  }
+}
