--- a/css/base.css
+++ b/css/base.css
@@ -1,12 +1,13 @@
-/* base start  */
+/*! base start  */
+@import url("https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,500&display=swap");
 
-@import url("https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300;400;500;600;700;800;900&display=swap");
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Roboto Slab", serif;
+  font-family: "Jost", sans-serif;
 }
+
 body {
   overflow-x: hidden;
 }
@@ -20,7 +21,7 @@ ol {
 
 a {
   text-decoration: none;
-  color: black;
+  color: #000;
 }
 
 h1,
@@ -38,9 +39,10 @@ p {
   width: 100%;
   margin: 0 auto;
 }
+
 .logo {
   font-size: 24px;
-  font-weight: 500px;
+  font-weight: 500;
   display: flex;
 }
 
@@ -48,14 +50,21 @@ button {
   cursor: pointer;
   border: none;
 }
+
+button:disabled {
+  opacity: 0.4 !important;
+  cursor: no-drop;
+}
+
 .btn {
   display: inline-block;
   padding: 0 25px;
   line-height: 40px;
   font-weight: 500;
-  border: 1px solid #000000;
+  border: 1px solid black;
   transition: 0.2s ease all;
 }
+
 .btn-sm {
   line-height: 33px;
 }
@@ -65,16 +74,16 @@ button {
 }
 
 .btn-primary {
-  background-color: antiquewhite;
-  color: #000000;
-  border-color: antiquewhite;
+  background-color: #DAA06D;
+  color: #fff;
+  border-color:#DAA06D;
 }
 
 .btn-primary:hover {
-  background-color: white;
-  color: rgb(172, 139, 97);
-  border-color: antiquewhite;
+  background-color: #fff;
+  color: #DAA06D ;
 }
+
 textarea {
   overflow: auto;
 }
@@ -88,6 +97,7 @@ textarea {
   border: 1px solid #dee0ea;
   padding: 8px 8px 8px 15px;
 }
+
 input[type="text"]:focus,
 input[type="password"]:focus,
 input[type="email"]:focus,
@@ -106,7 +116,7 @@ input[type="number"]::-webkit-inner-spin-button {
 
 /*! base end  */
 
-/* base responsive*/
+/* base responsive  */
 
 @media (max-width: 1200px) {
   .container {
@@ -119,11 +129,13 @@ input[type="number"]::-webkit-inner-spin-button {
     max-width: 768px;
   }
 }
+
 @media (max-width: 768px) {
   .container {
     max-width: 576px;
   }
 }
+
 @media (max-width: 576px) {
   .container {
     max-width: 400px;
