--- a/css/components/single-product/product-tabs.css
+++ b/css/components/single-product/product-tabs.css
@@ -16,11 +16,21 @@
   padding-bottom: 20px;
   margin-bottom: 20px;
 }
+
 .single-tabs .tab-list a.active {
   font-weight: 500;
 }
+
 .single-tabs .tab-panel-descriptions {
   font-size: 14px;
+}
+
+.single-tabs .content {
+  display: none;
+}
+
+.single-tabs .content.active {
+  display: block;
 }
 
 .single-tabs .tab-panel-information table {
